--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -16,8 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        app:cardBackgroundColor="@color/bg"
-        app:cardCornerRadius="45dp">
+        app:cardBackgroundColor="@color/bg">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,14 +24,15 @@
             android:orientation="vertical"
             android:padding="28dp">
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="60dp" />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:onClick="toLogin"
+                android:src="@drawable/back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/backicon" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,6 +42,10 @@
                 android:textColor="@color/txtbg"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="60dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,10 +77,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:alpha="0.7"
                 android:text="Confirm New Password"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editTextConfirmPassword"
@@ -85,10 +89,15 @@
                 android:drawableEnd="@drawable/done_icon"
                 android:inputType="textPassword" />
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="170dp"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
+                android:onClick="toLogin"
                 android:text="Reset"
                 android:textStyle="bold"
                 app:cornerRadius="32dp" />
@@ -110,9 +119,12 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:alpha="0.7"
+                    android:onClick="toLogin"
                     android:text="@string/login"
                     android:textColor="@color/my_primary"
                     android:textStyle="bold" />
+
+
             </LinearLayout>
 
         </LinearLayout>
