--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="@color/bg"
             android:padding="28dp">
               <TextView
                   android:layout_width="wrap_content"
@@ -48,6 +49,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="toReset"
                 android:drawableEnd="@drawable/done_icon"
                 android:inputType="textEmailAddress"/>
 
@@ -80,8 +82,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Forgot Password"
+                    android:onClick="toReset"
                     android:layout_centerVertical="true"
-                    android:textColor="@color/my_secondary"
+                    android:textStyle="bold"
+                    android:textColor="@color/txtbg"
                     android:layout_alignParentEnd="true"/>
             </RelativeLayout>
 
@@ -91,6 +95,7 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:onClick="toProfile"
                 android:text="Login"
                 app:cornerRadius="32dp"/>
 
@@ -145,10 +150,12 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:alpha="0.7"
+                    android:onClick="toSignup"
                     android:text="@string/signup"
                     android:textColor="@color/my_primary"
 
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
