--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="@color/bg"
             android:padding="28dp">
 
             <TextView
@@ -45,21 +46,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"
-                android:inputType="text" />
+                android:inputType="text"
+                android:minHeight="48dp" />
 
             <EditText
                 android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:minHeight="48dp" />
 
             <EditText
                 android:id="@+id/editTextPhoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Contact Number"
-                android:inputType="phone" />
+                android:inputType="phone"
+                android:minHeight="48dp" />
 
             <EditText
                 android:id="@+id/editTextCountry"
@@ -80,9 +84,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:minHeight="48dp" />
 
-            <com.google.android.material.button.MaterialButton
+            <Button
+                android:id="@+id/signup"
+                android:onClick="toVerify"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="Signup"
@@ -92,29 +99,33 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="10dp" />
+
             <View
                 android:layout_width="wrap_content"
-                android:layout_height="10dp"/>
+                android:layout_height="10dp" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Already have an account? "
                     android:layout_marginStart="70dp"
-                    android:alpha="0.7"/>
+                    android:alpha="0.7"
+                    android:text="Already have an account? " />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:alpha="0.7"
+                    android:onClick="toLogin"
                     android:text="@string/login"
                     android:textColor="@color/my_primary"
-
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
         </LinearLayout>
