--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -16,8 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        app:cardBackgroundColor="@color/bg"
-        app:cardCornerRadius="45dp">
+        app:cardBackgroundColor="@color/bg">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,10 +24,16 @@
             android:orientation="vertical"
             android:padding="28dp">
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/backicon" />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:onClick="BackToSignup"
+                android:src="@drawable/back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,6 +44,10 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -47,6 +56,11 @@
                 android:text="Enter the 4-digit code sent to your phone number"
                 android:textColor="@color/black" />
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
+
             <EditText
                 android:id="@+id/editTextCode"
                 android:layout_width="match_parent"
@@ -54,11 +68,13 @@
                 android:layout_marginTop="20dp"
                 android:drawableEnd="@drawable/done_icon"
                 android:hint="Verification Code"
-                android:inputType="number" />
+                android:inputType="number"
+                android:minHeight="48dp" />
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:onClick="toProfile"
                 android:layout_marginTop="20dp"
                 android:text="Verify"
                 android:textStyle="bold"
@@ -67,26 +83,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="70dp"
-                    android:alpha="0.7"
-                    android:text="Already have an account? " />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:alpha="0.7"
-                    android:text="@string/login"
-                    android:textColor="@color/txtbg"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                android:orientation="horizontal" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
