--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,12 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="my_primary">#00A0E8</color>
-    <color name="my_secondary">#070E0F</color>
+    <color name="my_secondary">#b6ece7</color>
     <color name="card">#FFBEBE</color>
     <color name="bg">#DEF8F8</color>
     <color name="txtbg">#157177</color>
     <color name="home">#157177</color>
+    <color name="btnclr">#bce1e2</color>
+    <color name="cardclr">#50c2c9</color>
 
 </resources>
