--- a/app/src/main/res/xml/bottom_navigation_menu.xml
+++ b/app/src/main/res/xml/bottom_navigation_menu.xml
@@ -12,6 +12,11 @@
         android:title="Search" />
 
     <item
+        android:id="@+id/navigation_add"
+        android:icon="@drawable/addicon3"
+        />
+
+    <item
         android:id="@+id/navigation_chat"
         android:icon="@drawable/chaticon"
         android:title="Chat" />
